tests/unit/fail/t1.hir
// 1 : month - wrong month

module datetime {
    def date(){
        x0:month = 2019-00:month; // wrong month
    }
}

